3rdparty/AvaSpecDLL-setup32/MAINDIR/examples/Vc#2008/avaspec.cs


		[StructLayout(LayoutKind.Sequential,Pack=1)]
		public struct DeviceConfigType
		{
			public ushort					m_Len;
			public ushort					m_ConfigVersion;
			[MarshalAs(UnmanagedType.ByValArray,SizeConst=USER_ID_LEN)]
			public byte[]					m_aUserFriendlyId;
			public DetectorType				m_Detector;
			public IrradianceType			m_Irradiance;
			public SpectrumCalibrationType	m_Reflectance;
			public SpectrumCorrectionType	m_SpectrumCorrect;
			public StandAloneType			m_StandAlone;
            public DynamicStorageType       m_DynamicStorage;
			[MarshalAs(UnmanagedType.ByValArray,SizeConst=15)]//(MAX_TEMP_SENSORS*NR_TEMP_POL_COEF)
			public float[]					m_aTemperature;
			public TecControlType           m_TecControl;
			public ProcessControlType       m_ProcessControl;
            public EthernetSettingsType     m_EthernetSettings;
			[MarshalAs(UnmanagedType.ByValArray,SizeConst=SETTINGS_RESERVED_LEN)]
			public byte[]					m_aReserved;
		}
		
		[DllImport("avaspec.dll")]
		public static extern int AVS_Init(short a_Port);

		[DllImport("avaspec.dll")]
		public static extern int AVS_Done();

		[DllImport("avaspec.dll")]
		public static extern int AVS_StopMeasure(IntPtr a_hDevice);

		[DllImport("avaspec.dll")]
		public static extern int AVS_PollScan(IntPtr a_hDevice);
		
		[DllImport("avaspec.dll")]
		public static extern bool AVS_Register(IntPtr a_hWnd);
		
		[DllImport("avaspec.dll")]
		public static extern int AVS_GetNrOfDevices();

        [DllImport("avaspec.dll")]
        public static extern int AVS_UpdateUSBDevices();

        [DllImport("avaspec.dll")]
        public static extern int AVS_UpdateETHDevices(uint a_ListSize, ref uint a_pRequiredSize, [In, Out] BroadcastAnswerType[] a_pList);

		[DllImport("avaspec.dll")]
		public static extern IntPtr AVS_GetVersionInfo(IntPtr a_hDevice, ref String16Type a_pFpgaVer, ref String16Type a_pFirmwareVer, ref String16Type a_pDllVer);

		[DllImport("avaspec.dll")]
		public static extern IntPtr AVS_Deactivate(IntPtr a_pDeviceId);

		[DllImport("avaspec.dll")]
		public static extern IntPtr AVS_Activate(ref AvsIdentityType a_DeviceId);
		
		[DllImport("avaspec.dll")]
        public static extern int AVS_GetList(uint a_ListSize, ref uint a_pRequiredSize, [In, Out] AvsIdentityType[] a_pList);
		
		[DllImport("avaspec.dll")]
		public static extern IntPtr AVS_PrepareMeasure(IntPtr a_hDevice, ref MeasConfigType a_pMeasConfig);

		[DllImport("avaspec.dll")]
		public static extern IntPtr AVS_Measure(IntPtr a_hDevice, IntPtr a_hWnd, short a_Nmsr);
		
		[DllImport("avaspec.dll")]
        public static extern IntPtr AVS_GetLambda(IntPtr a_hDevice, ref PixelArrayType a_pWavelength);

		[DllImport("avaspec.dll")]
		public static extern IntPtr AVS_GetNumPixels(IntPtr a_hDevice, ref ushort a_pNumPixel);

		[DllImport("avaspec.dll")]
        public static extern IntPtr AVS_GetParameter(IntPtr a_hDevice, uint a_Size, ref uint a_pRqdSize, ref DeviceConfigType a_pData);

		[DllImport("avaspec.dll")]
		public static extern IntPtr AVS_SetParameter(IntPtr a_hDevice,ref DeviceConfigType a_pDeviceParm);

		[DllImport("avaspec.dll")]
		public static extern int AVS_GetScopeData(IntPtr a_hDevice, ref uint a_pTimeLabel,ref PixelArrayType a_pSpectrum);

		[DllImport("avaspec.dll")]
		public static extern int AVS_GetSaturatedPixels(IntPtr a_hDevice, ref SaturatedArrayType a_pSaturated);
		
		[DllImport("avaspec.dll")]
		public static extern int AVS_SetAnalogOut(IntPtr a_hDevice, byte a_PortId, float a_Value);
		
		[DllImport("avaspec.dll")]
		public static extern int AVS_SetDigOut(IntPtr a_hHandle, byte a_PortId, byte a_Status);

		[DllImport("avaspec.dll")]
		public static extern int AVS_SetPwmOut(IntPtr a_hHandle, byte a_PortId, uint a_Freq, byte a_Duty);

		[DllImport("avaspec.dll")]
		public static extern int AVS_GetAnalogIn(IntPtr a_hDevice, byte a_AnalogInId, ref float a_pAnalogIn);

		[DllImport("avaspec.dll")]
		public static extern int AVS_GetDigIn(IntPtr a_hHandle, byte a_DigInId, ref byte a_pDigIn);

		[DllImport("avaspec.dll")]
		public static extern int AVS_UseHighResAdc(IntPtr a_hDevice, bool a_Enable);

        [DllImport("avaspec.dll")]
        public static extern int AVS_SetPrescanMode(IntPtr a_hDevice, bool a_Prescan);

        [DllImport("avaspec.dll")]
        public static extern int AVS_SetSensitivityMode(IntPtr a_hDevice, UInt32 a_SensitivityMode);

        [DllImport("avaspec.dll")]
        public static extern int AVS_GetIpConfig(IntPtr a_hDevice, ref EthernetSettingsType a_pData);

		public avaspec()
		{

		}
	}
}
